# video-compare

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  GUI_IMPLEMENTATION_PLAN.md  README.md  argagg.h  circular_buffer.h  common.h  config.h  container.cpp  container.h  controls.cpp  controls.h  core_types.cpp  core_types.h  demuxer.cpp  demuxer.h  display.cpp  display.h  download_and_extract_windows_deps.sh  duration_deriver.cpp  duration_deriver.h  ffmpeg.cpp  ffmpeg.h  filtered_logger.cpp  filtered_logger.h  format_converter.cpp  format_converter.h  main.cpp  makefile  player.cpp  player.h  png_saver.cpp  png_saver.h  queue.h  row_workers.h  runtime_notes.cpp  (+28 more)
.github/workflows/: build.yml
gui/: gui_launcher.cpp  gui_launcher.h  gui_manager.cpp  gui_manager.h
src/: controls.cpp  core_types.cpp  core_types.h  display.cpp  display.h  ffmpeg.cpp  ffmpeg.h  filtered_logger.cpp  format_converter.h  main.cpp  png_saver.cpp  png_saver.h  scope_manager.cpp  scope_manager.h  scope_window.h  sdl_event_info.cpp  sdl_event_info.h  sorted_flat_deque.h  string_utils.cpp  string_utils.h  timer.cpp  timer.h  version.cpp  video_compare.cpp  video_decoder.h  vmaf_calculator.cpp
